--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -110,7 +110,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
       <div class="form-group">
         <label for="inputUsername" class="col-sm-2 control-label">Username</label>
         <div class="col-sm-10">
-          <select id="inputUsername" name="username" ng-model="username" ng-change="loadData(0)" class="chosen-select" style="wIDth:350px;">
+          <select id="inputUsername" name="username" ng-model="username" ng-change="loadData(0)" class="chosen-select" style="width:350px;">
             <option value="">All</option>
             {[{range .botUsers}]}
               <option value="{[{.Username}]}" {[{if .IsSelected}]} selected="selected" {[{end}]}>{[{.Description}]} - {[{.Username}]}</option>
@@ -124,6 +124,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
           </select>
 
           <input type="button" ng-click="loadData(0)" class="btn btn-default" value="Search" />
+          <a class="btn btn-success" id="btn_youtube_api" target="_blank"  ng-show="username" href="/admin/youtube.json?username={{username}}">Youtube API</a>
         </div>
       </div>
     </form>
@@ -170,7 +171,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
           <tr ng-repeat="video in videos">
             <td><input type="checkbox" class="cb_bot_video" name="bot_video[]" value="{{video.ID}}" ng-model="video.selected" /></td>
             <td><a target="_blank" href="http://tv-cms.makathon.com/ytapi.php?user={{video.Username}}">{{video.Description}}</a>
-              <a  target="_blank" href="https://www.youtube.com/{{video.UserType}}/{{video.Username}}/videos"><span class="glyphicon glyphicon-new-window"></span></a>
+              <a target="_blank" href="https://www.youtube.com/{{video.UserType}}/{{video.Username}}/videos"><span class="glyphicon glyphicon-new-window"></span></a>
               <a href="#"><span class="glyphicon glyphicon-th-list" ng-click="selectUsername(video)"></span></a>
             </td>
             <td>{{video.Title}}</td><td><input type="text" ng-click="setSumID(video); style='selected-text'" ng-class="style" size="10" value="{{video.VideoID}}" /></td>
