--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -39,6 +39,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
                                             status: $scope.status,
                                             q: $scope.q,
                                             page: page,
+                                            isOrderTitle: $scope.isOrderTitle,
                                             time: Date.now()}}).
         error(function(){
           $scope.isLoading = false;
@@ -124,15 +125,18 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
               <option value="{[{.ID}]}" {[{if .IsSelected}]} selected="selected" {[{end}]}>{[{.Name}]}</option>
             {[{end}]}
           </select>
-
-          <input type="button" ng-click="loadData(0)" class="btn btn-default" value="Search" />
-          <a class="btn btn-success" id="btn_youtube_api" target="_blank"  ng-show="username" href="/admin/youtube.json?username={{username}}">Youtube API</a>
+            <input type="button" ng-click="loadData(0)" class="btn btn-default" value="Search" />
+            <a class="btn btn-success" id="btn_youtube_api" target="_blank"  ng-show="username" href="/admin/youtube.json?username={{username}}">Youtube API</a>
         </div>
       </div>
       <div class="form-group">
         <label for="inputKeyword" class="col-sm-2 control-label">Keyword</label>
         <div class="col-sm-10">
-        <input type="text" id="inputKeyword" ng-model="q" ng-keyup="$event.keyCode == 13 && loadData()" />
+        <input type="text" id="inputKeyword" class="col-sm-4" ng-model="q" ng-keyup="$event.keyCode == 13 && loadData(0)" />
+        <div class="col-sm-4">
+          <input type="checkbox" id="InputIsOrderTitle" ng-model="isOrderTitle" value="true" />
+          <label for="InputIsOrderTitle">Order Title</label>
+        </div>
         </div>
       </div>
     </form>
