add func encrypt all empty

--- a/templates/admin/encrypt.tmpl
+++ b/templates/admin/encrypt.tmpl
@@ -4,6 +4,8 @@
     <form method="post" action="">
       <input type="radio" name="idType" value="mthaiparseurl" checked> MThai Parse Url<br />
       -<br />
+      <input type="radio" name="idType" value="empty"> All Empty<br />
+      -<br />
       <input type="radio" name="idType" value="showid"> Show ID<br />
       <input type="radio" name="idType" value="listid"> List ID<br />
       <label for="">Id</label> : <input name="id" value='{[{.showid}]}' /><br />
