add button clear keyword

--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -30,6 +30,10 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
       $scope.countSumID = 0;
     };
 
+    $scope.clearKeyword = function() {
+      $scope.q = "";
+    };
+
     $scope.loadData = function(page) {
       if(page == 0) $scope.clearSum();
       $scope.isNext = false;
@@ -133,6 +137,9 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
         <label for="inputKeyword" class="col-sm-2 control-label">Keyword</label>
         <div class="col-sm-10">
         <input type="text" id="inputKeyword" class="col-sm-4" ng-model="q" ng-keyup="$event.keyCode == 13 && loadData(0)" />
+        <div class="col-sm-1">
+        <input type="button" ng-click="clearKeyword()" class="btn btn-warning" id="btn_clear_keyword" value="Clear" />
+        </div>
         <div class="col-sm-4">
           <input type="checkbox" id="InputIsOrderTitle" ng-model="isOrderTitle" value="true" />
           <label for="InputIsOrderTitle">Order Title</label>
