add page admin/krobkruakao

--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -178,7 +178,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
       <input type="submit" class="btn btn-info" name="update_status" value="Updated" />
       <label>Action : </label>
       <input type="button" class="btn btn-info" value="Wrap" ng-click="wrapVideoID()" />
-
+      </fieldset>
       <table class="table table-striped">
         <thead>
             <th><input type="checkbox" id="cb_bot_video" ng-model="toggleSelected" ng-change="toggleCheckAll()" /></th>
