--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -10,6 +10,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
     $scope.status = {[{.formSearch.Status}]};
     $scope.q = "";
     $scope.sumID = "";
+    $scope.srcType = 0;
     $scope.countSumID = 0;
     $scope.videos = [];
     $scope.isNext = false;
@@ -23,6 +24,11 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
       $scope.sumID += video.VideoID;
       $scope.sumTitle = video.Title;
       $scope.countSumID = $scope.sumID.split(",").length
+      if (video.VideoType == "youtube") {
+        $scope.srcType = 0;
+      } else if (video.VideoType == "url") {
+        $scope.srcType = 11;
+      }
     };
     $scope.clearSum = function() {
       $scope.sumTitle = "";
@@ -74,7 +80,10 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
       if (video.ProgramID > 0) {
         paramProgramID = "&program_id=" + video.ProgramID;
       }
-      return "http://tv-cms.makathon.com/bookmarktv.php?url=http://www.youtube.com/watch?v=" + video.VideoID + paramProgramID;
+      if (video.VideoType == "url") {
+        return "http://tv-cms.makathon.com/bookmarktv.php?src_type=11&id=" + video.VideoID + "&title=" + video.Title + paramProgramID;
+      }
+      return "http://tv-cms.makathon.com/bookmarktv.php?src_type=0url=http://www.youtube.com/watch?v=" + video.VideoID + paramProgramID;
     };
 
     $scope.selectUsername = function(video) {
@@ -147,6 +156,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
         </div>
       </div>
     </form>
+    </fieldset>
     <br />
     <h4></h4>
     <form class="form-horizontal" role="form" method="POST" action="/admin/botvideo">
@@ -167,7 +177,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <a class="btn btn-success" id="btn_update" target="_blank" href="http://tv-cms.makathon.com/bookmarktv.php?id={{sumID}}&amp;title={{sumTitle}}" ng-show="sumID">Update</a>
+          <a class="btn btn-success" id="btn_update" target="_blank" href="http://tv-cms.makathon.com/bookmarktv.php?id={{sumID}}&amp;title={{sumTitle}}&amp;src_type={{srcType}}" ng-show="sumID">Update</a>
           <input type="button" ng-click="clearSum()" class="btn btn-warning" id="btn_clear" value="Clear" />
         </div>
       </div>
@@ -178,7 +188,6 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
       <input type="submit" class="btn btn-info" name="update_status" value="Updated" />
       <label>Action : </label>
       <input type="button" class="btn btn-info" value="Wrap" ng-click="wrapVideoID()" />
-      </fieldset>
       <table class="table table-striped">
         <thead>
             <th><input type="checkbox" id="cb_bot_video" ng-model="toggleSelected" ng-change="toggleCheckAll()" /></th>
