--- a/templates/admin/otv.tmpl
+++ b/templates/admin/otv.tmpl
@@ -11,7 +11,7 @@
     <ul>
       {[{range .results}]}
         <li>
-          {[{.ContentSeasonID}]} {[{.NameTh}]} {[{.NameEn}]} {[{.ModifiedDate}]} <img src="{[{.Thumbnail}]}" alt="thumbnail" />
+          {[{.ContentSeasonID}]} {[{.NameTh}]} {[{.NameEn}]} {[{.ContentType}]} {[{.ModifiedDate}]} <img src="{[{.Thumbnail}]}" alt="thumbnail" />
           <a target="_blank" href="http://api.otv.co.th/api/index.php/v202/Content/index/15/1.0/2.0.2/{[{.ContentSeasonID}]}/0/50">Link API</a>
         </li>
       {[{end}]}
