--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -127,6 +127,8 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
     <fieldset>
       <legend><a href="/admin/botvideo">Bot Video</a>
         <div class="pull-right">
+        <a target="_blank" class="btn btn-default" href="http://tv-cms.makathon.com/program">P</a>
+        <a target="_blank" class="btn btn-default" href="http://tv-cms.makathon.com/mthai.php">M</a>
         <a target="_blank" class="btn btn-default" href="http://tv-cms.makathon.com/bookmarktv">Link</a>
         <a target="_blank" class="btn btn-default" href="http://tv.makathon.com/index.php/api/clearCache">Clear Cache</a>
       </div>
