--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -129,7 +129,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
         <div class="pull-right">
         <a target="_blank" class="btn btn-default" href="/admin/otv">O</a>
         <a target="_blank" class="btn btn-default" href="http://tv-cms.makathon.com/program">P</a>
-        <a target="_blank" class="btn btn-default" href="http://tv-cms.makathon.com/mthai.php">M</a>
+        <a target="_blank" class="btn btn-default" href="http://tv-cms.makathon.com/mthaiapi.php">M</a>
         <a target="_blank" class="btn btn-default" href="http://tv-cms.makathon.com/bookmarktv">Link</a>
         <a target="_blank" class="btn btn-default" href="http://tv.makathon.com/index.php/api/clearCache">Clear Cache</a>
       </div>
