add link bookmarktv

--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -128,6 +128,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
       <legend><a href="/admin/botvideo">Bot Video</a>
         <div class="pull-right">
         <a target="_blank" class="btn btn-default" href="/admin/otv">O</a>
+        <a target="_blank" class="btn btn-default" href="http://tv-cms.makathon.com/bookmarktv.php">B</a>
         <a target="_blank" class="btn btn-default" href="http://tv-cms.makathon.com/program">P</a>
         <a target="_blank" class="btn btn-default" href="http://tv-cms.makathon.com/mthaiapi.php">M</a>
         <a target="_blank" class="btn btn-default" href="http://tv-cms.makathon.com/bookmarktv">Link</a>
