--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -152,7 +152,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
             {[{end}]}
           </select>
             <input type="button" ng-click="loadData(0)" class="btn btn-default" value="Search" />
-            <a class="btn btn-success" id="btn_youtube_api" target="_blank"  ng-show="username" href="/admin/youtube.json?username={{username}}">Youtube API</a>
+            <a class="btn btn-success" id="btn_youtube_api" target="_blank"  ng-show="username" href="http://tv-cms.makathon.com/ytapi.php?user={{username}}">Youtube API</a>
         </div>
       </div>
       <div class="form-group">
