Add Status Suspended

--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -199,6 +199,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
       <input type="submit" class="btn btn-danger" name="update_status" value="Rejected" />
       <input type="submit" class="btn btn-primary" name="update_status" value="Waiting" />
       <input type="submit" class="btn btn-info" name="update_status" value="Updated" />
+      <input type="submit" class="btn btn-warning" name="update_status" value="Suspended" />
       <label>Action : </label>
       <input type="button" class="btn btn-info" value="Wrap" ng-click="wrapVideoID()" />
       <table class="table table-striped">
