--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -133,7 +133,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
   });
 
 </script>
-<div ng-controller="BotVideoCtrl" data-ng-init="username = '{[{.formSearch.Username}]}'" class="jumbotron">
+<div ng-controller="BotVideoCtrl" data-ng-init="channelId = '{[{.formSearch.ChannelID}]}'" class="jumbotron">
   <div class="container">
     <fieldset>
       <legend><a href="/admin/botvideo">Bot Video</a>
@@ -163,7 +163,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
             {[{end}]}
           </select>
             <input type="button" ng-click="loadData(0)" class="btn btn-default" value="Search" />
-            <a class="btn btn-success" id="btn_youtube_api" target="_blank"  ng-show="username" href="http://tv-cms.makathon.com/ytapi.php?user={{username}}">Youtube API</a>
+            <a class="btn btn-success" id="btn_youtube_api" target="_blank"  ng-show="channelId" href="http://tv-cms.makathon.com/ytapi.php?channelId={{channelId}}">Youtube API</a>
         </div>
       </div>
       <div class="form-group">
@@ -184,7 +184,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
     <br />
     <h4></h4>
     <form class="form-horizontal" role="form" method="POST" action="/admin/botvideo">
-      <input type="hidden" name="username" value="{{username}}" />
+      <input type="hidden" name="channelId" value="{{channelId}}" />
       <input type="hidden" name="status" value="{{status}}" />
 
       <div class="form-group">
