--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -83,7 +83,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
         paramProgramID = "&program_id=" + video.programId;
       }
       if (video.videoType == "youtube") {
-        return "http://tv-cms.makathon.com/bookmarktv.php?src_type=0&url=http://www.youtube.com/watch?v=" + video.videoId + paramProgramID;
+        return "http://tv-cms.makathon.com/bookmarktv.php?src_type=0&url=http://www.youtube.com/watch?v=" + video.videoId + "&title=" + video.title + paramProgramID;
       }
       return "http://tv-cms.makathon.com/bookmarktv.php?src_type=11&id=" + video.videoId + "&title=" + video.title + paramProgramID;
     };
