--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -239,9 +239,8 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
         <div class="col-md-2 col-md-offset-5">
           <input type="button" ng-click="loadData(nextPage)" ng-show="isNext" class="btn btn-default" value="Load More..." />
           <img ng-show="isLoading" src="/static/images/loading.gif" />
-          <a href="#" class="btn btn-default" >Top</a>
         </div>
-      </div>
+        <a href="#" class="btn btn-default pull-right" >Top</a>
     </form>
   </div>
 </div>
