--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -79,8 +79,9 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
 
     $scope.linkUpdate = function(video) {
       var paramProgramID = "";
-      var title = encodeURIComponent(video.title).replace("&quot;", "").replace("&#39;", "");
+      var title = encodeURIComponent(video.title.replace("&quot;", "").replace("&#39;", "").replace("\"", "").replace("\'", ""));
       console.log(title);
+      title = encodeURIComponent(title);
       if (video.programId > 0) {
         paramProgramID = "&program_id=" + video.programId;
       }
